added cache(Redis)
